Blend Two different Models

--- a/notebooks/EnsemblingAndTextParsing.ipynb
+++ b/notebooks/EnsemblingAndTextParsing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -27,11 +27,22 @@
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.preprocessing import Imputer, FunctionTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder, MinMaxScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.externals import joblib\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_selection import chi2, SelectKBest\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.cross_validation import KFold\n",
+    "\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk import word_tokenize\n",
     "\n",
     "import xgboost as xgb\n",
     "\n",
@@ -49,7 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Stemmers\n",
+    "sns = SnowballStemmer(language='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -157,6 +178,20 @@
    "source": [
     "** Split into training and test sets. **"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -286,10 +321,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl_01.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl_02.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl_03.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl_04.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_numeric/pipeline_numeric.pkl_05.npy']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(pipeline, os.path.join(basepath, 'data/processed/pipeline_numeric/pipeline_numeric.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Features based on the boiler plate. **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_json = list(map(json.loads, train.boilerplate))\n",
+    "test_json = list(map(json.loads, test.boilerplate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['boilerplate'] = train_json\n",
+    "test['boilerplate'] = test_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_component(boilerplate, key):\n",
+    "    \"\"\"\n",
+    "    Get value for a particular key in boilerplate json,\n",
+    "    if present return the value else return an empty string\n",
+    "    \n",
+    "    boilerplate: list of boilerplate text in json format\n",
+    "    key: key for which we want to fetch value e.g. body, title and url\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return np.array([bp[key] if key in bp and bp[key] else u'' for bp in boilerplate])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['body'] = get_component(train.boilerplate, 'body')\n",
+    "test['body'] = get_component(test.boilerplate, 'body')\n",
+    "\n",
+    "train['title'] = get_component(train.boilerplate, 'title')\n",
+    "test['title'] = get_component(test.boilerplate, 'title')\n",
+    "\n",
+    "train['url_component'] = get_component(train.boilerplate, 'url')\n",
+    "test['url_component'] = get_component(test.boilerplate, 'url')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LemmaTokenizer(object):\n",
+    "    def __init__(self):\n",
+    "        self.wnl = WordNetLemmatizer()\n",
+    "    \n",
+    "    def __call__(self, doc):\n",
+    "        return [self.wnl.lemmatize(t) for t in word_tokenize(doc)]\n",
+    "\n",
+    "class VarSelect(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, keys):\n",
+    "        self.keys = keys\n",
+    "        \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, df):\n",
+    "        return df[self.keys]\n",
+    "\n",
+    "class StemTokenizer(object):\n",
+    "    def __init__(self):\n",
+    "        self.sns = sns\n",
+    "    \n",
+    "    def __call__(self, doc):\n",
+    "        return [self.sns.stem(t) for t in word_tokenize(doc)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_non_alphanumeric(df):\n",
+    "    return df.replace(r'[^A-Za-z0-9]+', ' ', regex=True)\n",
+    "\n",
+    "strip_non_words = FunctionTransformer(remove_non_alphanumeric, validate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lemma Tokenizer\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('strip', strip_non_words),\n",
+    "    ('union', FeatureUnion([\n",
+    "        ('body', Pipeline([\n",
+    "            ('var', VarSelect(keys='body')),\n",
+    "            ('tfidf', TfidfVectorizer(strip_accents='unicode', tokenizer=LemmaTokenizer(),\n",
+    "                                     ngram_range=(1, 2), min_df=3, sublinear_tf=True)),\n",
+    "            ('svd', TruncatedSVD(n_components=100))\n",
+    "        ])),\n",
+    "        ('title', Pipeline([\n",
+    "            ('var', VarSelect(keys='title')),\n",
+    "            ('tfidf', TfidfVectorizer(strip_accents='unicode', tokenizer=LemmaTokenizer(),\n",
+    "                                     ngram_range=(1, 2), min_df=3, sublinear_tf=True)),\n",
+    "            ('svd', TruncatedSVD(n_components=100))\n",
+    "        ])),\n",
+    "        ('url', Pipeline([\n",
+    "            ('var', VarSelect(keys='url_component')),\n",
+    "            ('tfidf', TfidfVectorizer(strip_accents='unicode', tokenizer=LemmaTokenizer(),\n",
+    "                                     ngram_range=(1,2), min_df=3, sublinear_tf=True)),\n",
+    "            ('svd', TruncatedSVD(n_components=50))\n",
+    "        ]))\n",
+    "    ])),\n",
+    "    ('scaler', MinMaxScaler()),\n",
+    "    ('selection', SelectKBest(chi2, k=100)),\n",
+    "    ('model', LogisticRegression())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'test_size': 0.2,\n",
+    "    'random_state': 2,\n",
+    "    'stratify': train.is_news\n",
+    "}\n",
+    "\n",
+    "itrain, itest = train_test_split.tr_ts_split(len(train), **params)\n",
+    "\n",
+    "features = ['url_component', 'body', 'title']\n",
+    "\n",
+    "X_train = train.iloc[itrain][features]\n",
+    "X_test = train.iloc[itest][features]\n",
+    "\n",
+    "y_train = train.iloc[itrain].label\n",
+    "y_test = train.iloc[itest].label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
+       "          func=<function remove_non_alphanumeric at 0x7f85f4503730>,\n",
+       "          pass_y=False, validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
+       "       transformer_list=[('body', Pipeline(steps=[('var', VarSelect(keys='body')), ('tfidf', Tfidf...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC score on unseen examples are:  0.868649291267\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_preds = pipeline.predict_proba(X_test)[:, 1]\n",
+    "print('AUC score on unseen examples are: ', roc_auc_score(y_test, y_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_01.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_02.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_03.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_04.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_05.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_06.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_07.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_08.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_09.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_10.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_11.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_12.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_13.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_14.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_15.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_16.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_17.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_18.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_19.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_20.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_21.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_22.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_23.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_24.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_25.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_boilerplate_lemma/model_lemma.pkl_26.npy']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# save this model to disk\n",
+    "joblib.dump(pipeline, os.path.join(basepath, 'data/processed/pipeline_boilerplate_lemma/model_lemma.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Ensemble(object):\n",
+    "    def __init__(self, models):\n",
+    "        self.models = models\n",
+    "       \n",
+    "    def fit(self, X, y=None):\n",
+    "        cv = KFold(len(X), n_folds=3, shuffle=True, random_state=10)\n",
+    "        model_perf = {}\n",
+    "        \n",
+    "        for model in models:\n",
+    "            y_preds = np.array([])\n",
+    "\n",
+    "            for itrain, itest in cv:\n",
+    "                Xtr = X.iloc[itrain]\n",
+    "                ytr = y.iloc[itrain]\n",
+    "\n",
+    "                Xte = X.iloc[itest]\n",
+    "                yte = y.iloc[itest]\n",
+    "\n",
+    "                y_preds = model.predict(Xte)[:, 1]\n",
+    "            \n",
+    "            model\n",
+    "             \n",
+    "        for model in self.models\n",
+    "   \n",
+    "    def transform(self, X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
