--- a/notebooks/EnsemblingAndTextParsing.ipynb
+++ b/notebooks/EnsemblingAndTextParsing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -178,20 +178,6 @@
    "source": [
     "** Split into training and test sets. **"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -355,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,51 +585,147 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Ensemble(object):\n",
-    "    def __init__(self, models):\n",
-    "        self.models = models\n",
-    "       \n",
-    "    def fit(self, X, y=None):\n",
-    "        cv = KFold(len(X), n_folds=3, shuffle=True, random_state=10)\n",
-    "        model_perf = {}\n",
-    "        \n",
-    "        for model in models:\n",
-    "            y_preds = np.array([])\n",
-    "\n",
-    "            for itrain, itest in cv:\n",
-    "                Xtr = X.iloc[itrain]\n",
-    "                ytr = y.iloc[itrain]\n",
-    "\n",
-    "                Xte = X.iloc[itest]\n",
-    "                yte = y.iloc[itest]\n",
-    "\n",
-    "                y_preds = model.predict(Xte)[:, 1]\n",
-    "            \n",
-    "            model\n",
-    "             \n",
-    "        for model in self.models\n",
-    "   \n",
-    "    def transform(self, X_train)"
+    "## Blending"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Blending(object):\n",
+    "    def __init__(self, models):\n",
+    "        self.models = models # dict\n",
+    "        \n",
+    "    def predict(self, X, X_test, y=None):\n",
+    "        cv = KFold(len(X), n_folds=3, shuffle=True, random_state=10)\n",
+    "        \n",
+    "        dataset_blend_train = np.zeros((X.shape[0], len(self.models.keys())))\n",
+    "        dataset_blend_test = np.zeros((X_test.shape[0], len(self.models.keys())))\n",
+    "        \n",
+    "        for index, key in enumerate(self.models.keys()):\n",
+    "            dataset_blend_test_index = np.zeros((X_test.shape[0], len(cv)))\n",
+    "            \n",
+    "            model = self.models[key][1]\n",
+    "            feature_list = self.models[key][0]\n",
+    "            \n",
+    "            print('Training model of type: ', key)\n",
+    "            \n",
+    "            for i , (itrain, itest) in enumerate(cv):\n",
+    "                Xtr = X.iloc[itrain][feature_list]\n",
+    "                ytr = y.iloc[itrain]\n",
+    "\n",
+    "                Xte = X.iloc[itest][feature_list]\n",
+    "                yte = y.iloc[itest]\n",
+    "\n",
+    "                y_preds = model.predict_proba(Xte)[:, 1]\n",
+    "                \n",
+    "                dataset_blend_train[itest, index] = y_preds\n",
+    "                dataset_blend_test_index[:, i] = model.predict_proba(X_test)[:, 1]\n",
+    "                \n",
+    "            dataset_blend_test[:, index] = dataset_blend_test_index.mean(1)\n",
+    "             \n",
+    "        print('\\nBlending')\n",
+    "        clf = LogisticRegression()\n",
+    "        clf.fit(dataset_blend_train, y)\n",
+    "        \n",
+    "        y_submission = clf.predict_proba(dataset_blend_test)[:, 1]\n",
+    "        y_submission = (y_submission - y_submission.min()) / (y_submission.max() - y_submission.min())\n",
+    "        \n",
+    "        return y_submission"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline_numeric = joblib.load(os.path.join(basepath, 'data/processed/pipeline_numeric/pipeline_numeric.pkl'))\n",
+    "pipeline_boilerplate = joblib.load(os.path.join(basepath, 'data/processed/pipeline_boilerplate_lemma/model_lemma.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = list(train.select_dtypes(exclude=['object']).columns[1:]) + ['url']\n",
+    "numeric_features.remove('label')\n",
+    "\n",
+    "boilerplate_features = ['body', 'title', 'url_component']\n",
+    "\n",
+    "models = {\n",
+    "    'numeric': [numeric_features, pipeline_numeric],\n",
+    "    'boilerplate': [boilerplate_features, pipeline_boilerplate]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'test_size': 0.2,\n",
+    "    'random_state': 2,\n",
+    "    'stratify': train.is_news\n",
+    "}\n",
+    "\n",
+    "itrain, itest = train_test_split.tr_ts_split(len(train), **params)\n",
+    "\n",
+    "features = list(numeric_features) + list(boilerplate_features)\n",
+    "\n",
+    "X_train = train.iloc[itrain][features]\n",
+    "X_test = train.iloc[itest][features]\n",
+    "\n",
+    "y_train = train.iloc[itrain].label\n",
+    "y_test = train.iloc[itest].label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training model of type:  boilerplate\n",
+      "Training model of type:  numeric\n",
+      "\n",
+      "Blending\n"
+     ]
+    }
+   ],
+   "source": [
+    "blend = Blending(models)\n",
+    "y_blend = blend.predict(X_train, X_test, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC score after blending  0.838121627801\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('AUC score after blending ', roc_auc_score(y_test, y_blend))"
+   ]
   },
   {
    "cell_type": "code",
