Pickle the model that we built by parsing raw features.

--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -419,14 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "strip_non_words = FunctionTransformer(\n",
-    "    lambda x: x.replace(r'[^A-Za-z0-9]+', ' ', regex=True), validate=False)\n",
+    "def remove_non_alphanumeric(df):\n",
+    "    return df.replace(r'[^A-Za-z0-9]+', ' ', regex=True)\n",
+    "\n",
+    "strip_non_words = FunctionTransformer(remove_non_alphanumeric, validate=False)\n",
     "\n",
     "pipeline = Pipeline([\n",
     "            ('strip', strip_non_words),\n",
@@ -489,24 +491,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7efea02252f0>, pass_y=False,\n",
-       "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False))])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-317e1c402966>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
@@ -542,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -563,13 +562,13 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7efea02252f0>, pass_y=False,\n",
-       "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          func=<function remove_non_alphanumeric at 0x7ff03e056ea0>,\n",
+       "          pass_y=False, validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
+       "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVec...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,6 +576,83 @@
    "source": [
     "# train on full dataset\n",
     "pipeline.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_01.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_02.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_03.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_04.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_05.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_06.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_07.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_08.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_09.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_10.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_11.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_12.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_13.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_14.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_15.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_16.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_17.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_18.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_19.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_20.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_21.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_22.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_23.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_24.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_25.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_26.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_27.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_28.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_29.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_30.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_31.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_32.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_33.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_34.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_35.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_36.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_37.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_38.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_39.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_40.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_41.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_42.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_43.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_44.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_45.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_46.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_47.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_48.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_49.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_50.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_51.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_52.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_53.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_54.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_55.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/pipeline_raw/model_raw.pkl_56.npy']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# store this model on the disk\n",
+    "joblib.dump(pipeline, os.path.join(basepath, 'data/processed/pipeline_raw/model_raw.pkl'))"
    ]
   },
   {
