Fix the parsing function.

--- a/notebooks/EnsemblingAndTextParsing.ipynb
+++ b/notebooks/EnsemblingAndTextParsing.ipynb
@@ -1016,14 +1016,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training model of type:  boilerplate_raw\n"
+      "Training model of type:  boilerplate_raw\n",
+      "Training model of type:  boilerplate_lemma\n",
+      "Training model of type:  boilerplate_stem\n",
+      "\n",
+      "Blending\n"
      ]
     }
    ],
@@ -1041,12 +1045,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_sub['label'] = predictions\n",
-    "sample_sub.to_csv(os.path.join(basepath, 'submissions/blend.csv'), index=False)"
+    "sample_sub.to_csv(os.path.join(basepath, 'submissions/blend_3.csv'), index=False)"
    ]
   },
   {
