--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -581,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
